Add debug line to build script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,13 @@ jobs:
         uses: quarto-dev/quarto-actions/render@v2
         with:
           to: all
+
+      # Debug if something goes wrong!
+      - name: Show Build Log on Failure
+        if: steps.build_step.outcome == 'failure' # Only run if the previous step failed
+        run: |
+          echo "--- Error Log Contents ---"
+          cat /home/runner/work/Coe-Catalog-2023-2024/Coe-Catalog-2023-2024/index.log || echo "Build log not found or empty."
           
       # Push changes back to the repo
       - name: Push changes
