--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
      # Render output
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
+        continue-on-error: true 
         with:
           to: all
 
