--- a/_quarto.yml
+++ b/_quarto.yml
@@ -101,6 +101,7 @@ format:
               \usepackage{fancyhdr}
               \lfoot{\textit{Coe College (2022-2023)}}
               \renewcommand{\part}[1]{\addcontentsline{toc}{part}{#1}}
+              \newcommand{\pandocbounded}[1]{#1}
     
     include-after-body: 
       text: |
