--- a/_quarto.yml
+++ b/_quarto.yml
@@ -78,7 +78,7 @@ toc-depth: 2
 
 format:
   html:
-    theme: quartz
+    theme: darkly
     mainfont: "Garamond"
   docx:
     mainfont: "Garamond"
